--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google" value="notranslate" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tiki Agent</title>
+    <title>Agent</title>
 </head>
 
 <body>
